// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots widgets/Loader circular 1`] = `
<div
  className="MuiGrid-container-115"
>
  <div
    className="MuiGrid-item-116 MuiGrid-grid-xs-12-154"
  >
    <div
      className="MuiGrid-container-115 MuiGrid-align-items-xs-center-123 MuiGrid-justify-xs-center-132 Loader-root-211"
    >
      <div
        className="MuiCircularProgress-root-213 MuiCircularProgress-colorPrimary-216 MuiCircularProgress-indeterminate-215"
        role="progressbar"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-218"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-219 MuiCircularProgress-circleIndeterminate-221"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader custom 1`] = `
<div
  className="MuiGrid-container-222"
>
  <div
    className="MuiGrid-item-223 MuiGrid-grid-xs-12-261"
  >
    <div
      className="MuiGrid-container-222 MuiGrid-align-items-xs-center-230 MuiGrid-justify-xs-center-239 Loader-root-318"
    >
      <div
        className="MuiCircularProgress-root-320 MuiCircularProgress-colorPrimary-323 MuiCircularProgress-indeterminate-322"
        role="progressbar"
        style={
          Object {
            "color": "#9c27b0",
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-325"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-326 MuiCircularProgress-circleIndeterminate-328"
            cx={44}
            cy={44}
            fill="none"
            r={18.5}
            strokeWidth={7}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader linear 1`] = `
<div
  className="MuiGrid-container-1"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-40"
  >
    <div
      className="MuiGrid-container-1 MuiGrid-align-items-xs-center-9 MuiGrid-justify-xs-center-18 Loader-root-97"
    >
      <div
        className="MuiLinearProgress-root-99 MuiLinearProgress-colorPrimary-100 Loader-linear-98"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar-107 MuiLinearProgress-barColorPrimary-108 MuiLinearProgress-bar1Indeterminate-110"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar-107 MuiLinearProgress-barColorPrimary-108 MuiLinearProgress-bar2Indeterminate-111"
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-329 MuiGrid-spacing-xs-24-352"
    >
      <div
        className="MuiDrawer-docked-425"
      >
        <div
          className="MuiPaper-root-436 MuiPaper-elevation0-438 MuiDrawer-paper-426 MuiDrawer-paperAnchorLeft-427 MuiDrawer-paperAnchorDockedLeft-431"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-473 MuiList-padding-474 SideMenu-root-464 Component-flexed-463"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-465"
            />
            <div
              className="MuiButtonBase-root-487 MuiListItem-root-477 MuiListItem-default-480 MuiListItem-gutters-484 SideMenu-listItemGutters-467 MuiListItem-button-485 SideMenu-listItem-466"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-491 MuiListItemIcon-root-490"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-498 SideMenu-listItemText-469"
              >
                <span
                  className="MuiTypography-root-504 MuiTypography-subheading-511 MuiListItemText-primary-501 SideMenu-listItemPrimary-468"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-528"
              />
            </div>
            <div
              className="MuiButtonBase-root-487 MuiListItem-root-477 MuiListItem-default-480 MuiListItem-gutters-484 SideMenu-listItemGutters-467 MuiListItem-button-485 SideMenu-listItem-466"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-491 MuiListItemIcon-root-490"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-498 SideMenu-listItemText-469"
              >
                <span
                  className="MuiTypography-root-504 MuiTypography-subheading-511 MuiListItemText-primary-501 SideMenu-listItemPrimary-468"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-528"
              />
            </div>
            <div
              className="MuiButtonBase-root-487 MuiListItem-root-477 MuiListItem-default-480 MuiListItem-gutters-484 SideMenu-listItemGutters-467 MuiListItem-button-485 SideMenu-listItem-466"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-491 MuiListItemIcon-root-490"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-498 SideMenu-listItemText-469"
              >
                <span
                  className="MuiTypography-root-504 MuiTypography-subheading-511 MuiListItemText-primary-501 SideMenu-listItemPrimary-468"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-491"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-528"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-749 MuiGrid-spacing-xs-24-772"
    >
      <div
        className="MuiDrawer-docked-845"
      >
        <div
          className="MuiPaper-root-856 MuiPaper-elevation0-858 MuiDrawer-paper-846 MuiDrawer-paperAnchorLeft-847 MuiDrawer-paperAnchorDockedLeft-851"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-893 MuiList-padding-894 SideMenu-root-884 Component-flexed-883"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-885"
            />
            <div
              className="MuiButtonBase-root-907 MuiListItem-root-897 MuiListItem-default-900 MuiListItem-gutters-904 SideMenu-listItemGutters-887 MuiListItem-button-905 SideMenu-activeItem-892"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-911 MuiListItemIcon-root-910"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-918 SideMenu-listItemText-889 SideMenu-listItemHidden-890"
              >
                <span
                  className="MuiTypography-root-924 MuiTypography-subheading-931 MuiListItemText-primary-921 SideMenu-listItemPrimary-888"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-948"
              />
            </div>
            <div
              className="MuiButtonBase-root-907 MuiListItem-root-897 MuiListItem-default-900 MuiListItem-gutters-904 SideMenu-listItemGutters-887 MuiListItem-button-905 SideMenu-listItem-886"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-911 MuiListItemIcon-root-910"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-918 SideMenu-listItemText-889 SideMenu-listItemHidden-890"
              >
                <span
                  className="MuiTypography-root-924 MuiTypography-subheading-931 MuiListItemText-primary-921 SideMenu-listItemPrimary-888"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-948"
              />
            </div>
            <div
              className="MuiButtonBase-root-907 MuiListItem-root-897 MuiListItem-default-900 MuiListItem-gutters-904 SideMenu-listItemGutters-887 MuiListItem-button-905 SideMenu-listItem-886"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-911 MuiListItemIcon-root-910"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-918 SideMenu-listItemText-889 SideMenu-listItemHidden-890"
              >
                <span
                  className="MuiTypography-root-924 MuiTypography-subheading-931 MuiListItemText-primary-921 SideMenu-listItemPrimary-888"
                >
                  Theme
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-948"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-539 MuiGrid-spacing-xs-24-562"
    >
      <div
        className="MuiDrawer-docked-635"
      >
        <div
          className="MuiPaper-root-646 MuiPaper-elevation0-648 MuiDrawer-paper-636 MuiDrawer-paperAnchorLeft-637 MuiDrawer-paperAnchorDockedLeft-641"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-683 MuiList-padding-684 SideMenu-root-674 Component-flexed-673"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-675"
            />
            <div
              className="MuiButtonBase-root-697 MuiListItem-root-687 MuiListItem-default-690 MuiListItem-gutters-694 SideMenu-listItemGutters-677 MuiListItem-button-695 SideMenu-activeItem-682"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-701 MuiListItemIcon-root-700"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-708 SideMenu-listItemText-679"
              >
                <span
                  className="MuiTypography-root-714 MuiTypography-subheading-721 MuiListItemText-primary-711 SideMenu-listItemPrimary-678"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-738"
              />
            </div>
            <div
              className="MuiButtonBase-root-697 MuiListItem-root-687 MuiListItem-default-690 MuiListItem-gutters-694 SideMenu-listItemGutters-677 MuiListItem-button-695 SideMenu-listItem-676"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-701 MuiListItemIcon-root-700"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-708 SideMenu-listItemText-679"
              >
                <span
                  className="MuiTypography-root-714 MuiTypography-subheading-721 MuiListItemText-primary-711 SideMenu-listItemPrimary-678"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-738"
              />
            </div>
            <div
              className="MuiButtonBase-root-697 MuiListItem-root-687 MuiListItem-default-690 MuiListItem-gutters-694 SideMenu-listItemGutters-677 MuiListItem-button-695 SideMenu-listItem-676"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-701 MuiListItemIcon-root-700"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-708 SideMenu-listItemText-679"
              >
                <span
                  className="MuiTypography-root-714 MuiTypography-subheading-721 MuiListItemText-primary-711 SideMenu-listItemPrimary-678"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-701"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-738"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1417 MuiGrid-spacing-xs-24-1440"
    >
      <div
        className="MuiGrid-item-1418 MuiGrid-grid-xs-12-1456"
      >
        <div
          className="MuiPaper-root-1518 MuiPaper-elevation2-1522 MuiPaper-rounded-1519 Widget-root-1513"
        >
          <h2
            className="MuiTypography-root-1545 MuiTypography-title-1551 MuiTypography-colorInherit-1564 MuiTypography-gutterBottom-1562"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1569 MuiGrid-spacing-xs-24-1592"
    >
      <div
        className="MuiGrid-item-1570 MuiGrid-grid-xs-12-1608"
      >
        <div
          className="MuiPaper-root-1670 MuiPaper-elevation2-1674 MuiPaper-rounded-1671 Widget-root-1665 Widget-featured-1669"
        >
          <h2
            className="MuiTypography-root-1697 MuiTypography-title-1703 MuiTypography-colorInherit-1716 MuiTypography-gutterBottom-1714"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1721 MuiGrid-spacing-xs-24-1744"
    >
      <div
        className="MuiGrid-item-1722 MuiGrid-grid-xs-12-1760"
      >
        <div
          className="MuiGrid-container-1721 MuiGrid-spacing-xs-24-1744"
        >
          <div
            className="MuiGrid-item-1722 MuiGrid-grid-xs-6-1754"
          >
            <div
              className="MuiPaper-root-1824 MuiPaper-elevation2-1828 MuiPaper-rounded-1825 Widget-root-1819 Widget-border-1820 Widget-border-top-1821"
            >
              <h2
                className="MuiTypography-root-1851 MuiTypography-title-1857 MuiTypography-colorInherit-1870 MuiTypography-gutterBottom-1868"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1722 MuiGrid-grid-xs-6-1754"
          >
            <div
              className="MuiPaper-root-1824 MuiPaper-elevation2-1828 MuiPaper-rounded-1825 Widget-root-1819 Widget-border-1820 Widget-border-bottom-1822"
            >
              <h2
                className="MuiTypography-root-1851 MuiTypography-title-1857 MuiTypography-colorInherit-1870 MuiTypography-gutterBottom-1868"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1722 MuiGrid-grid-xs-6-1754"
          >
            <div
              className="MuiPaper-root-1824 MuiPaper-elevation2-1828 MuiPaper-rounded-1825 Widget-root-1819 Widget-border-1820 Component-customTopBorder-1817 Widget-border-top-1821"
            >
              <h2
                className="MuiTypography-root-1851 MuiTypography-title-1857 MuiTypography-colorInherit-1870 MuiTypography-gutterBottom-1868"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1722 MuiGrid-grid-xs-6-1754"
          >
            <div
              className="MuiPaper-root-1824 MuiPaper-elevation2-1828 MuiPaper-rounded-1825 Widget-root-1819 Widget-border-1820 Component-customBotomBorder-1818 Widget-border-bottom-1822"
            >
              <h2
                className="MuiTypography-root-1851 MuiTypography-title-1857 MuiTypography-colorInherit-1870 MuiTypography-gutterBottom-1868"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-959 MuiGrid-spacing-xs-24-982"
    >
      <div
        className="MuiGrid-item-960 MuiGrid-grid-xs-12-998"
      >
        <div
          className="MuiPaper-root-1060 MuiPaper-elevation2-1064 MuiPaper-rounded-1061 Widget-root-1055"
        >
          <h2
            className="MuiTypography-root-1087 MuiTypography-title-1093 MuiTypography-colorInherit-1106 MuiTypography-gutterBottom-1104"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1111 MuiGrid-spacing-xs-24-1134"
    >
      <div
        className="MuiGrid-item-1112 MuiGrid-grid-xs-12-1150"
      >
        <div
          className="MuiPaper-root-1212 MuiPaper-elevation2-1216 MuiPaper-rounded-1213 Widget-root-1207 Widget-featured-1211"
        >
          <h2
            className="MuiTypography-root-1239 MuiTypography-title-1245 MuiTypography-colorInherit-1258 MuiTypography-gutterBottom-1256"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1263 MuiGrid-spacing-xs-24-1286"
    >
      <div
        className="MuiGrid-item-1264 MuiGrid-grid-xs-12-1302"
      >
        <div
          className="MuiGrid-container-1263 MuiGrid-spacing-xs-24-1286"
        >
          <div
            className="MuiGrid-item-1264 MuiGrid-grid-xs-6-1296"
          >
            <div
              className="MuiPaper-root-1366 MuiPaper-elevation2-1370 MuiPaper-rounded-1367 Widget-root-1361 Widget-border-1362 Widget-border-top-1363"
            >
              <h2
                className="MuiTypography-root-1393 MuiTypography-title-1399 MuiTypography-colorInherit-1412 MuiTypography-gutterBottom-1410"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1264 MuiGrid-grid-xs-6-1296"
          >
            <div
              className="MuiPaper-root-1366 MuiPaper-elevation2-1370 MuiPaper-rounded-1367 Widget-root-1361 Widget-border-1362 Widget-border-bottom-1364"
            >
              <h2
                className="MuiTypography-root-1393 MuiTypography-title-1399 MuiTypography-colorInherit-1412 MuiTypography-gutterBottom-1410"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1264 MuiGrid-grid-xs-6-1296"
          >
            <div
              className="MuiPaper-root-1366 MuiPaper-elevation2-1370 MuiPaper-rounded-1367 Widget-root-1361 Widget-border-1362 Component-customTopBorder-1359 Widget-border-top-1363"
            >
              <h2
                className="MuiTypography-root-1393 MuiTypography-title-1399 MuiTypography-colorInherit-1412 MuiTypography-gutterBottom-1410"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1264 MuiGrid-grid-xs-6-1296"
          >
            <div
              className="MuiPaper-root-1366 MuiPaper-elevation2-1370 MuiPaper-rounded-1367 Widget-root-1361 Widget-border-1362 Component-customBotomBorder-1360 Widget-border-bottom-1364"
            >
              <h2
                className="MuiTypography-root-1393 MuiTypography-title-1399 MuiTypography-colorInherit-1412 MuiTypography-gutterBottom-1410"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
